--- a/legacy_sysfs/CMakeLists.txt
+++ b/legacy_sysfs/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.0)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(Ultrasound ultrasound_legacy.cpp)
+add_executable(Ultrasound ultrasound_legacy.c)
