Include MRAA/UPM Libraries

--- a/mraa/CMakeLists.txt
+++ b/mraa/CMakeLists.txt
@@ -3,4 +3,6 @@ project(Ultrasound)
 
 set(CMAKE_C_STANDARD 11)
 
+include_directories(/usr/include/mraa)
+
 add_executable(UltrasoundMRAA ultrasound_mraa.c)
