--- a/upm/CMakeLists.txt
+++ b/upm/CMakeLists.txt
@@ -3,4 +3,6 @@ project(Ultrasound)
 
 set(CMAKE_C_STANDARD 11)
 
+include_directories(/usr/include/upm)
+
 add_executable(UltrasoundUPM ultrasound_upm.c)
