--- a/upm/CMakeLists.txt
+++ b/upm/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_C_STANDARD 11)
 
 include_directories(/usr/include/upm)
 include_directories(/usr/include/mraa)
-
-add_library(mraa)
+link_directories(/usr/lib/x86_64-linux-gnu)
 
 add_executable(UltrasoundUPM ultrasound_upm.c)
+
+target_link_libraries(UltrasoundUPM mraa)
