--- a/mraa/CMakeLists.txt
+++ b/mraa/CMakeLists.txt
@@ -5,6 +5,6 @@ include_directories(/usr/include/upm)
 include_directories(/usr/include/mraa)
 link_directories(/usr/lib/x86_64-linux-gnu)
 
-add_executable(UltrasoundUPM ultrasound_mraa.c)
+add_executable(UltrasoundMRAA ultrasound_mraa.c)
 
-target_link_libraries(UltrasoundUPM mraa)
+target_link_libraries(UltrasoundMRAA mraa)
